<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background = "@color/cyan" >
    
<RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

   <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      
      android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
   <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/text"
      android:onClick="on"
      android:text="@string/on" />
   
   <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/button1"
      android:onClick="list"
      android:text="@string/List" />

   <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/button3"
      android:onClick="off"
      android:text="@string/off" />

   
    <Button
      android:id="@+id/button5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/button4"
      android:layout_centerInParent="true"
 	  android:padding="10dip"
      android:onClick="up"
      android:text="@string/Up" />
    
   <Button
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/button5"
      android:layout_alignParentLeft="true"
 	  android:padding="10dip"
      android:onClick="left"
      android:text="@string/Left" />

  <Button
	      android:id="@+id/search"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_below ="@+id/text"
      	  android:layout_centerHorizontal="true"
	      android:text="@string/Search" />
  
   <Button
      android:id="@+id/button7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
	  android:layout_below ="@+id/button5"
      android:layout_alignParentRight="true"
 	  android:padding="10dip"
      android:onClick="right"
      android:text="@string/Right" />
   
   <Button
      android:id="@+id/button8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below ="@+id/button7"
      android:layout_centerHorizontal="true"
 	  android:padding="10dip"
      android:onClick="down"
      android:text="@string/Down" />
   
   <Button
      android:id="@+id/buttonA"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
 	  android:padding="10dip"
 	  android:layout_below ="@+id/text"
      android:onClick="automatic"
      android:text="@string/automatic" />
   
   <Button
      android:id="@+id/buttonC"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below = "@+id/button1"
      android:layout_alignParentRight="true"
 	  android:padding="10dip"
      android:onClick="controller"
      android:text="@string/controller" />

   <ListView
      android:id="@+id/listView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible" 
      android:layout_below ="@+id/button8">

   </ListView>


</RelativeLayout>

</ScrollView>
